# STL_3D_Viewer

./: README.md
DB/: 환자정보.drawio
DB/PatientDB/: PatientDB.pro  widget.cpp  widget.h
DB/build-PatientDB-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
DB/build-PatientDB-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/.qtc_clangd/: compile_commands.json
DB/build-PatientDB-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/debug/: PatientDB.ilk  moc_widget.cpp
DB/ui/: ui.pro  widget.cpp  widget.h
DB/ui/ui/: 3DViewform.ui  3Dmainwindow.ui  ui.pro  widget.ui
DB_UI/: main.cpp  ui.pro  widget.cpp  widget.h
LastProject7/Doctor/Doctor/: Doctor.pro  doctor.cpp  doctor.h  doctor.ui  main.cpp  mainwindow.cpp
LastProject7/Doctor/build-Doctor-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/: Makefile.Debug  Makefile.Release  ui_doctor.h  ui_mainwindow.h
LastProject7/MainServer/MainServer/: MainServer.pro  mainserver.cpp  mainserver.h  mainserver.ui
LastProject7/MainServer/build-MainServer-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  patient.db  ui_mainserver.h
LastProject7/Nurse/Nurse/: Nurse.pro  nurse.h
LastProject7/Nurse/build-Nurse-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_nurse.h
OneView/forms/: doctor.ui  mainwindow.ui  stlviewer.ui
OneView/include/: CustomInteractorStyle.h  doctor.h  mainwindow.h  stlviewer.h
OneView/src/: CustomVTKWidget.cpp  doctor.cpp  stlviewer.cpp
STLViewer - 복사본 (2)/include/: CustomInteractorStyle.h  stlviewer.h
STLViewer - 복사본 (2)/src/: CustomInteractorStyle.cpp  stlviewer.cpp
STLViewer/forms/: stlviewer.ui
STLViewer/include/: CustomInteractorStyle.h  CustomVTKWidget.h  observer.h  stlviewer.h
STLViewer/src/: CustomInteractorStyle.cpp  CustomVTKWidget.cpp  main.cpp  mainwindow.cpp  stlviewer.cpp
STLViewer_230205/forms/: stlviewer.ui
STLViewer_230205/include/: CustomInteractorStyle.h  CustomVTKWidget.h  TriMesh.h  stlviewer.h
STLViewer_230205/src/: CustomInteractorStyle.cpp  CustomVTKWidget.cpp  stlviewer.cpp
STLViewer_Mentoring2/include/: CustomInteractorStyle.h
STLViewer_Mentoring2/src/: CustomInteractorStyle.cpp  stlviewer.cpp
STLViewer_hole_Filling/: CMakeLists.txt
STLViewer_hole_Filling/include/: CustomInteractorStyle.h  CustomVTKWidget.h  stlviewer.h
STLViewer_hole_Filling/src/: main.cpp  stlviewer.cpp
STLViewer_shortDistance/forms/: stlviewer.ui
STLViewer_shortDistance/include/: CustomInteractorStyle.h  observer.h  stlviewer.h
STLViewer_shortDistance/src/: CustomInteractorStyle.cpp  CustomVTKWidget.cpp  stlviewer.cpp
Server_VS/STL/: 1002.stl
Server_VS/doctor/forms/: doctor.ui  mainwindow.ui
Server_VS/doctor/include/: doctor.h  mainwindow.h
Server_VS/doctor/src/: doctor.cpp
Server_VS/mainserver/: CMakeLists.txt
Server_VS/mainserver/include/: mainserver.h
Server_VS/mainserver/src/: mainserver.cpp
doctor/: CMakeLists.txt
doctor/src/: doctor.cpp  mainwindow.cpp
final/OneView2/: CMakeLists.txt
final/OneView2/forms/: cutform.ui  doctor.ui  lightwidgetform.ui  mainwindow.ui  shadingform.ui  stlviewer.ui
final/OneView2/include/: CustomInteractorStyle.h  CustomVTKWidget.h  cutform.h  filingform.h  lightwidgetform.h  shadingform.h  stlviewer.h
final/OneView2/src/: CustomInteractorStyle.cpp  CustomVTKWidget.cpp  cutform.cpp  doctor.cpp  filingform.cpp  lightwidgetform.cpp  main.cpp  mainwindow.cpp  shadingform.cpp  stlviewer.cpp
final/OneViewUI/: CMakeLists.txt
final/OneViewUI/forms/: cutform.ui  doctor.ui  filingform.ui  lightwidgetform.ui  mainwindow.ui  occlusion.ui  stlviewer.ui  (+1 more)
server/Doctor/: Doctor.pro  Doctor.pro.user.24c2a8c  Doctor.pro.user.7023d0a  Doctor.pro.user.a812816  doctor.cpp  doctor.h  doctor.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
server/MainServer/: MainServer.pro  MainServer.pro.user.24c2a8c  MainServer.pro.user.7023d0a  MainServer.pro.user.a812816  main.cpp  mainserver.cpp  mainserver.h  mainserver.ui
(+158 files in other folders)
